cmake_minimum_required (VERSION 2.8)

project(assimp)

if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   add_definitions(-fPIC)
endif()

include_directories(include)

if (MSVC)
   add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif (MSVC)

set ( SRC
code/3DSConverter.cpp
code/3DSLoader.cpp
code/ACLoader.cpp
code/ASELoader.cpp
code/ASEParser.cpp
code/AssimpCExport.cpp
code/Assimp.cpp
code/AssimpPCH.cpp
code/B3DImporter.cpp
code/BaseImporter.cpp
code/BaseProcess.cpp
code/Bitmap.cpp
code/BlenderBMesh.cpp
code/BlenderDNA.cpp
code/BlenderLoader.cpp
code/BlenderModifier.cpp
code/BlenderScene.cpp
code/BlenderTessellator.cpp
code/BVHLoader.cpp
code/CalcTangentsProcess.cpp
code/COBLoader.cpp
code/ColladaExporter.cpp
code/ColladaLoader.cpp
code/ColladaParser.cpp
code/ComputeUVMappingProcess.cpp
code/ConvertToLHProcess.cpp
code/CSMLoader.cpp
code/DeboneProcess.cpp
code/DefaultIOStream.cpp
code/DefaultIOSystem.cpp
code/DefaultLogger.cpp
code/DXFLoader.cpp
code/Exporter.cpp
code/FBXAnimation.cpp
code/FBXBinaryTokenizer.cpp
code/FBXConverter.cpp
code/FBXDeformer.cpp
code/FBXDocument.cpp
code/FBXDocumentUtil.cpp
code/FBXImporter.cpp
code/FBXMaterial.cpp
code/FBXMeshGeometry.cpp
code/FBXModel.cpp
code/FBXNodeAttribute.cpp
code/FBXParser.cpp
code/FBXProperties.cpp
code/FBXTokenizer.cpp
code/FBXUtil.cpp
code/FindDegenerates.cpp
code/FindInstancesProcess.cpp
code/FindInvalidDataProcess.cpp
code/FixNormalsStep.cpp
code/GenFaceNormalsProcess.cpp
code/GenVertexNormalsProcess.cpp
code/HMPLoader.cpp
code/IFCBoolean.cpp
code/IFCCurve.cpp
code/IFCGeometry.cpp
code/IFCLoader.cpp
code/IFCMaterial.cpp
code/IFCOpenings.cpp
code/IFCProfile.cpp
code/IFCReaderGen.cpp
code/IFCUtil.cpp
code/Importer.cpp
code/ImporterRegistry.cpp
code/ImproveCacheLocality.cpp
code/IRRLoader.cpp
code/IRRMeshLoader.cpp
code/IRRShared.cpp
code/JoinVerticesProcess.cpp
code/LimitBoneWeightsProcess.cpp
code/LWOAnimation.cpp
code/LWOBLoader.cpp
code/LWOLoader.cpp
code/LWOMaterial.cpp
code/LWSLoader.cpp
code/MakeVerboseFormat.cpp
code/MaterialSystem.cpp
code/MD2Loader.cpp
code/MD3Loader.cpp
code/MD5Loader.cpp
code/MD5Parser.cpp
code/MDCLoader.cpp
code/MDLLoader.cpp
code/MDLMaterialLoader.cpp
code/MS3DLoader.cpp
code/NDOLoader.cpp
code/NFFLoader.cpp
code/ObjExporter.cpp
code/ObjFileImporter.cpp
code/ObjFileMtlImporter.cpp
code/ObjFileParser.cpp
code/OFFLoader.cpp
code/OgreBinarySerializer.cpp
code/OgreImporter.cpp
code/OgreMaterial.cpp
code/OgreStructs.cpp
code/OgreXmlSerializer.cpp
code/OptimizeGraph.cpp
code/OptimizeMeshes.cpp
code/PlyExporter.cpp
code/PlyLoader.cpp
code/PlyParser.cpp
code/PostStepRegistry.cpp
code/PretransformVertices.cpp
code/ProcessHelper.cpp
code/Q3BSPFileImporter.cpp
code/Q3BSPFileParser.cpp
code/Q3BSPZipArchive.cpp
code/Q3DLoader.cpp
code/RawLoader.cpp
code/RemoveComments.cpp
code/RemoveRedundantMaterials.cpp
code/RemoveVCProcess.cpp
code/SceneCombiner.cpp
code/ScenePreprocessor.cpp
code/SGSpatialSort.cpp
code/SkeletonMeshBuilder.cpp
code/SMDLoader.cpp
code/SortByPTypeProcess.cpp
code/SpatialSort.cpp
code/SplitByBoneCountProcess.cpp
code/SplitLargeMeshes.cpp
code/StandardShapes.cpp
code/STEPFileEncoding.cpp
code/STEPFileReader.cpp
code/STLExporter.cpp
code/STLLoader.cpp
code/Subdivision.cpp
code/TargetAnimation.cpp
code/TerragenLoader.cpp
code/TextureTransform.cpp
code/TriangulateProcess.cpp
code/UnrealLoader.cpp
code/ValidateDataStructure.cpp
code/VertexTriangleAdjacency.cpp
code/XFileImporter.cpp
code/XFileParser.cpp
code/XGLLoader.cpp

contrib/clipper/clipper.cpp
contrib/ConvertUTF/ConvertUTF.c
contrib/irrXML/irrXML.cpp
contrib/poly2tri/poly2tri/common/shapes.cc
contrib/poly2tri/poly2tri/sweep/advancing_front.cc
contrib/poly2tri/poly2tri/sweep/cdt.cc
contrib/poly2tri/poly2tri/sweep/sweep.cc
contrib/poly2tri/poly2tri/sweep/sweep_context.cc

)

add_library( assimp
   STATIC
   ${SRC}
)


